Correcciones en los siguinetes puntos. 1) Validación de campos para solo letras input Nombre, Ap. Paterno y Ap. Materno. 2) email valido. 3) se hizo la base de datos carrectamente.

--- a/css/estiloindex.css
+++ b/css/estiloindex.css
@@ -152,3 +152,15 @@ left: 20px;
 	margin-top: 0px;
 	margin-left: 470px;
 }
+
+#status {
+	width: 234px;
+}
+
+
+
+input:required:valid {
+
+border: 1px solid red;
+
+}
