--- a/contenido_beca/select_depende/select_dependientes_3_niveles.css
+++ b/contenido_beca/select_depende/select_dependientes_3_niveles.css
@@ -1,5 +1,12 @@
-#demoIzq, #demoDer, #demoMed { border:1px dashed; width:195px; background-color:#EAEAEA; text-align:center; margin:0 1px 0 1px; }
+#demoIzq, #demoDer, #demoMed {
+   /*border:1px dashed;*/
+   width: 250px; 
+   /*background-color:#EAEAEA; */
+   text-align:center;
+   margin:0 1px 0 1px; }
 
 #demoDer, #demoMed { float:right; }
 
-select { width:150px; }
+select { 
+	width: 250px; 
+}
